# MySoftRenderer

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/begin/: CMakeLists.txt  main.cpp
apps/line/: CMakeLists.txt  bresenham.cpp  daa.cpp  dda.cpp  main.cpp  parametric_v1.cpp  parametric_v2.cpp  parametric_v3.cpp  try_01.cpp
include/math/: geometry.h
include/model/: model.h
include/tga/: tgaimage.h
src/: CMakeLists.txt  model.cpp  tgaimage.cpp
tests/: CMakeLists.txt  test_math.cpp
